# AndroidBOINC

./: .gitignore_global  AndroidBOINC.apk  COPYRIGHT.txt  README.md  TODO.txt
android/: .gitignore  AndroidBOINC.apk  AndroidManifest.xml  README.md
android/BOINCClient/: AndroidManifest.xml
android/BOINC_Manager/: AndroidManifest.xml
android/edu.berkeley.boinc.AndroidBOINCActivity/: .gitignore  AndroidManifest.xml
android/edu.berkeley.boinc.manager/: AndroidManifest.xml
android/edu.uwm.phys.einstein.MainActivity/: AndroidManifest.xml
docs/: AndroidBOINC_wiki.txt  howto_build_AndroidBOINC.txt  howto_build_BOINCapps_for_AndroidBOINC.txt
native/: .gitignore  README.md  build.sh  build_android.sh
native/android-4-tc/: SOURCES
native/boinc-7.0.9/: Makefile  Makefile.am  Makefile.in  Makefile.incl  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  svn_version.h  version.h
native/boinc-trunk-rev25927_android/: Makefile.am  configure.ac
native/boinc-trunk-rev25927_android/db/: Makefile.am  boinc_db.cpp
native/boinc-trunk-rev25927_android/db/.svn/: all-wcprops  entries
native/curl-7.21.4/: Makefile  config.status  curl-config  libcurl.pc  libtool
native/curl-7.27.0/: Makefile  config.status  curl-config  libcurl.pc  libtool
native/diffs_android/: gitmaster171212_arm_host-info.patch  rev25985_android_shm.patch  rev26130_android_wifi-detection-android4.patch
native/diffs_boinc-trunk-rev25927/: rev25927_android.patch  rev25927_android_patch2_md5.patch  rev25927_android_patch3_wo-hardcoded-platform.patch  (+2 more)
(+1829 files in other folders)
