## -*- mode: makefile; tab-width: 4 -*-
## $Id: Makefile.am 25857 2012-07-10 17:28:04Z davea $

include $(top_srcdir)/Makefile.incl

## the following headers need to be installed
if INSTALL_HEADERS
pkginclude_HEADERS =  boinc_db.h db_base.h boinc_db_types.h
endif

## other stuff to go into the distribution
EXTRA_DIST = constraints.sql schema.sql init_db
